# python-fun-scripts

./: .gitignore  README.md  cspell.json  pyproject.toml  pyrightconfig.json
01_tree/: README.md  main.py
docs/: DEV_ENV.md
experiments/01_terminal_tree/: main.py
python_fun_scripts/: __init__.py
tools/: new_script.py
