[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "python-fun-scripts"
version = "0.1.0"
description = "Personal Python playground for experiments and one-off scripts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "maosanhioro" }]
dependencies = []
keywords = ["python", "playground", "experiments"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "mypy>=1.10",
  "pytest>=8.3",
  "ruff>=0.5",
  "types-setuptools",
]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
src = ["experiments", "lib"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "Q", "ANN", "S"]
ignore = ["ANN101", "ANN102", "ANN401", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
strict_optional = true
ignore_missing_imports = true
allow_redefinition = true
plugins = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["experiments"]
pythonpath = ["experiments"]

[tool.coverage.run]
branch = true
source = ["experiments"]
